--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danat Gutema</title>
-    <link rel="stylesheet" href="/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <script src="https://kit.fontawesome.com/9f4e0bc681.js" crossorigin="anonymous"></script>
     <link rel="about" href="/about.html">
     <link rel="contact" href="/contact.html">
