--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>CONTACT</title>
     
     <script src="https://kit.fontawesome.com/9f4e0bc681.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <script src="javascript.js"></script>
 
 </head>
@@ -51,13 +51,13 @@
     </form>
     <div class="icons">
         <span title="HOME">
-            <a href="/index.html" target="_blank"><i class="fa-solid fa-house fa-3x" id="house"></i></a>
+            <a href="index.html" target="_blank"><i class="fa-solid fa-house fa-3x" id="house"></i></a>
         </span>
         <span title="about me">
-            <a href="/about.html" target="_blank"><i class="fa-solid fa-user fa-3x" id="user"></i></a>
+            <a href="about.html" target="_blank"><i class="fa-solid fa-user fa-3x" id="user"></i></a>
         </span>
         <span title="contact me">
-            <a href="/contact.html" target="_blank"><i class="fa-solid fa-envelope fa-3x" id="envelope"></i></a>
+            <a href="contact.html" target="_blank"><i class="fa-solid fa-envelope fa-3x" id="envelope"></i></a>
         </span>
 
 
